--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+		<link rel="shortcut icon" type="image/png" href="../static/favicon.ico"/>
 
 	</head>
 	<body>
