--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 	<section class="hero">
 		<div class="backgroundImage">
 			<h1>In Your Dreams</h1>
-			<h3>A diary to catalog your dreams</h3>
-			<a href="{{url_for('showCategories')}}" class="btn">Enter</a>
+			<h3>A diary to record your dreams.</h3>
+			<a href="{{url_for('showCategories')}}" class=" btnHome">Enter</a>
 		</div>
 	</section>
 	
