--- a/static/styles.css
+++ b/static/styles.css
@@ -27,10 +27,16 @@ ul, nav{
 	list-style: none;
 }
 
-
-a, .btn {
+a {
 	text-decoration: none;
-	color: inherit;
+	color: #fff;
+	cursor: pointer;
+	opacity: 0.9;
+}
+
+.btn {
+	text-decoration: none;
+	color: black;
 	cursor: pointer;
 	opacity: 0.9;
 }
@@ -41,15 +47,26 @@ a:hover, .btn:hover{
 
 
 a.btn, .btn {
-	color: #000;
+	color: #fff;
 	border-radius: 4px;
-	text-transform: uppercase;
-	background-color: #fff;
-	font-weight: 800;
+	background-color: #000;
 	text-align: center;
+    font-size: 1.2em;
 }
 
+/*-------------
+ 	Home
+-------------*/
 
+.btnHome {
+    opacity: 0.9;
+    border-radius: 4px;
+	text-transform: capitalize;
+	font-size: 1.4em;
+	text-align: center;
+    text-decoration: none;
+	cursor: pointer;
+}
 /*-------------
  	Header
 -------------*/
@@ -67,9 +84,11 @@ header{
 	padding: 35px 100px 0;
 }
 
+/*
 header h2{
-	font-family: 'Quicksand', sans-serif;
+	font-family: sans-serif;
 }
+*/
 
 header nav{
 	display: flex;
@@ -87,6 +106,27 @@ header nav li:last-child{
 	margin-right: 0;	
 }
 
+header nav .loginNav {
+    right: 100px;
+    position: absolute;
+}
+
+header nav .miniPhoto {
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    right: 15px;
+    position: absolute;
+    top: 15px;
+    
+}
+@media screen and (max-width: 425px){
+    header nav .loginNav {
+    left: 0;
+    position: relative;
+    }
+}
+
 /*----------------
  	Hero Section
 ----------------*/
@@ -99,7 +139,7 @@ header nav li:last-child{
 	text-align: center;
 }
 .hero .backgroundImage{
-	background-image: url("star-large.jpg");
+	background-image: url("test2.jpg");
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -156,12 +196,14 @@ header nav li:last-child{
 ----------------*/
 
 .pane {
-	background-image: url("star-large.jpg");
+	background-image: url("test2.jpg");
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
 	position: relative;
 	justify-content: center;
 	text-align: center;
 	min-height: 50vh;
-/*	background-color: #000;*/
 
 }
 
@@ -173,9 +215,10 @@ header nav li:last-child{
 	height: 100%;
 }
 
+
 .pane h1{
 	margin-top: 20%;
-	font: bold 60px 'Open Sans', sans-serif;
+	font: bold 48px 'Open Sans', sans-serif;
 	margin-bottom: 15px;
 }
 
@@ -198,11 +241,15 @@ header nav li:last-child{
 }
 
 .content {
+    display: -webkit-flex;
 	display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
 	text-align: center;
-	justify-content: center;
-
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 
 .content .row {
@@ -211,11 +258,12 @@ header nav li:last-child{
 	border-radius: 15px;
 	background-color: black;
 	margin: 15px;
+    vertical-align: text-top;
 
 }
 
 .content h3{
-	font: normal 28px 'Open Sans', sans-serif;
+	font: normal 28px sans-serif;
 	margin-bottom: 40px;
 }
 .content p {
@@ -223,10 +271,40 @@ header nav li:last-child{
 	line-height: 1.6;
 }
 
-.content a.btn{
+.content a.btn {
 	display: inline-block;
 	padding: 14px 20px;
 }
+
+
+.content .text-on-hover {
+    display: none;
+}
+
+.content a:hover i {
+    display: none;
+}
+
+.content a:hover .text-on-hover{
+    transition: all 0.2s ease-in-out;
+    display: block;
+    color: #fff;
+    text-transform: capitalize;
+}
+
+
+.create {
+    float: right;
+    display: inline;
+}
+
+.userPhoto{
+	height: 150px;
+	width: 150px;
+	border-radius: 15px;
+    margin-bottom: 15px;
+}
+
 @media (max-width: 600px){
 
 	.content .row{
@@ -248,7 +326,7 @@ header nav li:last-child{
 ----------------*/
 .main .btn, .home .btn{
 	float: right;
-	border: 1px solid #fff;
+	border: 1px solid #000;
 	margin-right: 20px;
 	margin-bottom: 20px;
 
@@ -259,10 +337,6 @@ header nav li:last-child{
 	float: left;
 }
 
-img {
-	border-radius: 15px;
-	margin: .5% 1% 1% 18%;
-}
 
 
 @media screen and (max-width: 950px){
@@ -313,11 +387,11 @@ form {
 }
 .form label {
 	display: block;
-	font: normal 28px 'Open Sans', sans-serif;
+	font: normal 28px sans-serif;
 	margin-bottom: 20px;
 }
 .form-control {
-	font: normal 16px 'Open Sans', sans-serif;
+	font: normal 16px sans-serif;
 	padding: 10px;
 	line-height: 1.6;
 	border-radius: 15px;
@@ -331,7 +405,7 @@ form textarea {
 form .btn, .row .btn {
 	display: block;
 	padding: 14px 26px;
-	border: 1px solid #fff;
+	border: 1px solid #000;
 	margin: 0 auto;
 	margin-bottom: 20px;
 }
