--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,11 @@
 			<li><a href="{{url_for('homepage')}}">Home</a></li>
 			<li><a href="{{url_for('showCategories')}}">Dreams</a></li>
 			{%if 'username' not in session %}
-			<li><a href="{{url_for('showLogin')}}">Log in</a></li>
+			<li><a class="loginNav" href="{{url_for('showLogin')}}">Log in</a></li>
 			{% else %}
-			<li><a href="{{url_for('disconnect')}}">Log Out</a></li>
+			<li><a class="loginNav" href="{{url_for('disconnect')}}">Log Out</a></li>
+			<li><img class="miniPhoto" src="{{session.picture}}"></li>
 			{% endif %}
+			
 		</nav>
 </header>
