--- a/templates/publiccategories.html
+++ b/templates/publiccategories.html
@@ -4,7 +4,7 @@
 
 <section class="pane">
 	<div class="title">
-		<h1>Categories</h1>
+		<h1>Dreams</h1>
 	</div>
 </section>
 
@@ -23,9 +23,10 @@
 	</div>
 {% for category in categories %}
 	<div class="row">
+	    <img class="catIcon" src="{{category.img}}">
 		<h3>{{category.name}}</h3>
 		<p>{{category.description}}</p>
-		<a href="{{url_for('showDreams', category_id = category.id)}}" class="btn">View</a>
+        <a href="{{url_for('showDreams', category_id = category.id)}}" class="btn"><i class="fa fa-eye"></i><span class="text-on-hover">View</span></a>
 	</div>
 {% endfor %}
 </section>
