--- a/templates/publicdreams.html
+++ b/templates/publicdreams.html
@@ -27,7 +27,7 @@
 		<h3>{{i.title}}</h3>
 		<p> {{i.dream_date}}</p>
 		<p>{{i.description}}</p>
-		<p>I awoke feeling {{i.emotion}}</p>
+		<p>Emotion: {{i.emotion}}</p>
 	</div>
 
 {% endfor %}
