--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -15,6 +15,8 @@
 					<input type ="text" class="form-control" maxlength="100" name="name" value="{{category.name}}">
 					<label for="description">Description:</label>
 					<textarea class="form-control" maxlength="250" rows="5" name="description">{{category.description}}</textarea>
+				    <label for="image">Image URL:</label>
+					<input type ="url" class="form-control" maxlength="500" name="image">
 					<button type="submit" class="btn" id="submit" type="submit">
 					<span class="fa fa-plus" aria-hidden="true"></span> Save</button>
 				</div>
