--- a/templates/privatecategories.html
+++ b/templates/privatecategories.html
@@ -30,7 +30,7 @@
 <!--    <div class="main -->
 		{% for category in categories %}
 		<div class="row">
-           {% if upload %}
+           {% if category.upload %}
             <img class="catPhoto" src="{{url_for('uploaded_file', filename= category.upload )}}">
             {% else %}
             <img class="catPhoto" src="{{category.image}}">
