--- a/templates/main.html
+++ b/templates/main.html
@@ -2,12 +2,16 @@
 <html lang="en">
 	<head>
 		<title>In Your Dreams</title>
+                <meta name="author" content="Megan Dollar">
+                <meta name="description" content="Dream Diary Application">
+                <meta charset="UTF-8">
+                <meta name="keywords" content="HTML, CSS, RestfulAPI, Python, SQLAlchemy">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-		<link rel="shortcut icon" type="image/png" href="../static/favicon.png
-		"/>
+                <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ong') }}">
 
 	</head>
 	<body>
