--- a/templates/publicdreams.html
+++ b/templates/publicdreams.html
@@ -28,6 +28,7 @@
 		<p> {{i.dream_date}}</p>
 		<p>{{i.description}}</p>
 		<p>Emotion: {{i.emotion}}</p>
+		<a href="{{url_for('showCategories')}}" class="btn"><i class="fa fa-home"></i><span class="text-on-hover">Home</span></a>
 	</div>
 
 {% endfor %}
