--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -9,14 +9,22 @@
 </section>
 
 <div class="row">
-			<form action="#" method = "post">
+			<form action="#" method = "post" enctype="multipart/form-data">
 				<div class="form">
 					<label for="name">Name:</label>
-					<input type ="text" class="form-control" maxlength="100" name="name" value="{{category.name}}">
+					    <input type ="text" class="form-control" maxlength="100" name="name" value="{{category.name}}">
 					<label for="description">Description:</label>
-					<textarea class="form-control" maxlength="250" rows="5" name="description">{{category.description}}</textarea>
+					    <textarea class="form-control" maxlength="250" rows="5" name="description">{{category.description}}</textarea>
 				    <label for="image">Image URL:</label>
-					<input type ="url" class="form-control" maxlength="500" name="image">
+					    <input type ="url" class="form-control" maxlength="500" name="image">
+				    <label class="btn uploadBtn">Browse 
+                                           <i class="fa fa-folder-open-o" aria-hidden="true"></i>
+                                           <input type="file" name="file" style="display: none;">
+                                    </label>
+                                    <label class="btn uploadBtn">Upload 
+                                           <i class="fa fa-upload" aria-hidden="true"></i>
+                                           <input class="uploadBtn" type="submit" value="Upload" style="display: none;">
+                                     </label>
 					<button type="submit" class="btn" id="submit" type="submit">
 					<span class="fa fa-plus" aria-hidden="true"></span> Save</button>
 				</div>
@@ -24,6 +32,7 @@
 			<a href = '{{url_for('showCategories')}}'>
 			<button class="btn"><span class="fa fa-ban"></span> Cancel</button></a>
 	</div>
+
 
 
 {% endblock %}
