--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
 		<nav>
 			<li><a href="{{url_for('homepage')}}">Home</a></li>
 			<li><a href="{{url_for('showCategories')}}">Dreams</a></li>
-			<li><a href="https://github.com/megdollar/DreamApp">GitHub</a></li>
+			<li><a href="https://github.com/megdollar/postgresql">GitHub</a></li>
 			{%if 'username' not in session %}
 			<li><a class="loginNav" href="{{url_for('showLogin')}}">Log in</a></li>
 			{% else %}
